# FileFaker

./: BuildRelease.ps1  CMakeLists.txt  LICENSE  README.md  RedirectTemplate.ps1
headers/: CMakeLists.txt  fake_file_functions.h  file_faker.h  file_faker_client.h  file_faker_server.h  file_functions_hooker.h  function_address_finder.h  hook_file_functions.h  imports_finder.h  injector_loader.h  pe_parser.h  redirections_manager.h  redirections_sender.h
src/: CMakeLists.txt  fake_file_functions.c  file_faker_client.c  file_faker_server.c  file_functions_hooker.c  file_redirector.c  function_address_finder.c  hook_file_functions.c  imports_finder.c  injector_loader.c  main.c  main_dll.c  pe_parser.c  redirections_manager.c
tests/: CMakeLists.txt  CommandType.h  FileFakerTests.cpp  FileFakerTestsChildProcessF.cpp  FileFakerTestsSameProcessF.cpp  FileFakerTestsSameProcessF.h  PE_ParserTests.cpp  TestFileReaderProgram.c  TestFileReaderProgram.cpp
tests/utils/: CMakeLists.txt  CommandType.h  ProcessRunner.cpp  ProcessRunner.h  ProcessRunnerTestProgram.cpp  ProcessRunnerTests.cpp
